package sim;

enum WorldOperationResult {
    NO_ERROR = 0;
};
